--- a/index.html
+++ b/index.html
@@ -29,12 +29,101 @@
 		<div class="row">
 			<div class="col-md-7">
 				<h1>My story</h1>
-				<p>When i was 5 months old, i found my self all alone in the parking lot of an apartment building next to my home.My mom was nowhere to be found and my blind brother wasnt aloud to go out of our home. It was cold and i lost my way back so i had to find somewhere to spend the night. Thats when i saw a big black car and above its' tires there was a small opening where a narrow comforting space was found at the end of the path, which was perfect for a one night stay. I slept tight for three hours straight and once i woke up i decided to go out and try to find my mom once again. Little did i know, i found my slef lost again but this time in a tight dark space and i could find the bath that led me here. I began to cry and cry until my lungs where no longer functioning properly. Nobode came for me, not my mom. not my dad, not my brother. After 4 hours of begging for help i just gave up and fell back into a deep night sleep. Next morning i woke up with the floor trembling and a weird sound coming out of this place. I started to cry agsin with all the voice i had left and the floor heard me and stopped with the weird shakening. I heard footsteps coming closer and closer to me, until-nothing. The footsteps stopped, my heart beggan to pump in beat again but for somereason there was light now in this dark place. Suddenly, a hand clumped on me tightly, lifting me up and looking at me for a long second. Her eyes were sparkling and i could see my reflection in them. I stayed frozen and she let me down on the floor and went back to the car, heading of somewhere. I didnt know what to do now, i had nowhere to go nor a family to help me. I felt tired since my sleep was interupted my the sound of the humongous black machine so i diciede to find nother place to sleep. This time i found another narrow spot which wasnt as comforting but still good enough for a couple of hours and i promised my self that i wont forget my way outside again. Well, that didnt go quite as planned. I was lost. I decided to accept my fate and just wait there until another hand comes to pick me up again and save me. 3hours later my vocal chords began to function again, it was the same car that i slept last night and it came back. I could understand the distict sound of its engine. The same footsteps came but this time when they stopped no light came through. I was in a much bigger trouble that before. This time i saw the same weird girl struggling her way under the car. She used a long stick to scare me which wasnt a first good impression to be honest but she made up for it i have to say. As i was saying, with the stick she scared me and somehow my instincts gided me to the exit and once again, i was in the hands of this human being. This time tho she didnt let me go </p>
+				<p>When i was 5 months old, i found my self all alone in the parking lot of an apartment building next to my home.My mom was nowhere to be found and my blind brother wasnt aloud to go out of our home. It was cold and i lost my way back so i had to find somewhere to spend the night. Thats when i saw a big black car and above its' tires there was a small opening where a narrow comforting space was found at the end of the path, which was perfect for a one night stay. I slept tight for three hours straight and once i woke up i decided to go out and try to find my mom once again. Little did i know, i found myslef lost again but this time in a tight dark space and i couldnt find the path that led me here. I began to cry and cry until my lungs where no longer functioning properly. Nobode came for me, not my mom. not my dad, not my brother. After 4 hours of begging for help i just gave up and fell back into a deep night sleep. Next morning i woke up with the floor trembling and a weird sound coming out of this place. I started to cry again with all the voice i had left until the floor stopped with the weird shakening. I heard footsteps coming closer and closer to me, until-nothing. The footsteps stopped, my heart beggan to pump in beat again but for some reason there was light now in this dark place. Suddenly, a hand clumped on me tightly, lifting me up and looking at me for a long second. Her eyes were sparkling and i could see my reflection in them. I stayed frozen and she let me down on the floor and went back to the car, heading to somewhere. I didnt know what to do now, i had nowhere to go nor a family to help me. I felt tired since my sleep was interupted my the sound of the humongous black machine so i diciede to find another place to sleep. This time i found another narrow spot which wasnt as comforting but still good enough for a couple of hours and i promised myself that i wouldnt forget my way outside again. Well, that didnt go quite as planned. I was lost. I decided to accept my fate and just wait there until another hand comes to pick me up again and save me. 3hours later my vocal chords began to function again, it was the same car that i slept last night and it came back. I could understand the distinct sound of its engine. The same footsteps came but this time when they stopped no light came through. I was in a much bigger trouble than before. This time i saw the same weird girl struggling her way under the car. She used a long stick to scare me which wasnt a first good impression to be honest but she made up for it i have to say. As i was saying, with the stick she scared me and somehow my instincts gided me to the exit and once again, i was in the hands of this human being. This time tho she didnt let me go. Instead she took me up in her apartment and fed me until my mouth was too full to make a noise. Its been 2 amazing years and now i live with my 3 siblings,which one of them is my blind brother who after 1 and a half year e came in this lovely home as well. He has a different story tho. I live everyday, with love, comfort and crayziness. </p>
+			</div>
+
+			<div class="col-md-5">
+				<img src="img/glasses.jpeg"width="600" height="700">
 			</div>
 		</div>
 
+		<div class="row">
+
+			<div class="col-md-4">
+
+				<div class="card" style="width: 18rem;">
+  <img src="img/teddy.jpeg" class="card-img-top" alt="Teddy">
+  <div class="card-body">
+    <h5 class="card-title">AWARDS</h5>
+    <ul>Awards
+    	<li>Best cuddler at night</li>
+    	<li>Only cat with human eyebrows</li>
+    	<li>Best at changing faces and expressions throughout the day</li>
+    	<li>First cat to be able to meow while eating</li>
+    	<li>Best to keep a baby face</li>
+    	<li>Best manipulator</li>
+    </ul>
+
+
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+  				</div>
+			</div>
+
+			<div class="col-md-4">
+
+				<div class="card" style="width: 18rem;">
+  <img src="img/hat.jpeg" class="card-img-top" alt="hat">
+  <div class="card-body">
+    <h5 class="card-title">CRIMES</h5>
+    <ul>Crimes
+    	<li>Bring cockrowch on my mom's bed while she was sleeping</li>
+    	<li>Woke up my nona during night</li>
+    	<li>Wont let others sleep</li>
+    	<li>Bugs killer</li>
+    	<li>Throw down everything infront of me</li>
+    	<li>Jump scare anyone whenever i feel bored</li>
+    </ul>
+
+
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+
+
+			</div>
+		</div>
+
+		<div class="col-md-4">
+
+			<div class="card" style="width: 18rem;">
+  <img src="img/us.jpeg" class="card-img-top" alt="skills">
+  <div class="card-body">
+    <h5 class="card-title">SKILLS</h5>
+    <ul>Skills
+    	<li>Backflip</li>
+    	<li>Jump to high places</li>
+    	<li>Ability to manipulate my mother</li>
+    	<li>Best at jumpscares</li>
+    	<li>Ability to break the unbreakable</li>
+    	<li>Football skills</li>
+    </ul>
+
+
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+
 
 		</div>
+
+
+		</div>
+
+		<body style="background-color:#A6C6DE;">
+
+
+
+
+		</body>
+
+	<div class="row">
+
+		<div class="col-md-4">
+			<img src="img/download.png" width=400x400>
+		</div>
+		<div class="col-md-8">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/ntRSa1Mcn5U?si=MvAZIY2Jrw5BZIjY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		</div>
+	</div>
 	</div>
 
 </body>
